--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>Project</groupId>
-    <artifactId>JavaSchoolHW</artifactId>
+    <artifactId>JavaSchoolProject</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
